ch(ui):modifying the UI -modified the Navbar,it should not be covered by signup form, or other content - Reduced the number of colours i was  using. - Made the app responsive across all devices. - modified the tab button on home,a user initially sees  some content - Ensured consistency in your design, by implementing the card
[finishes #169954019]

--- a/ui/css/homepage.css
+++ b/ui/css/homepage.css
@@ -31,7 +31,8 @@ ul{
     color:#ffffff;
 }
 #button_1:hover{
-    background: #ffc107;
+    color:tomato;
+    background-color: #fff;
 }
 #description p1 a{
     font-size: 15px;
@@ -39,7 +40,12 @@ ul{
 }
 #description p1 a:hover{
     font-size: 15px;
-    color:#ffc107;
+    color:#fff;
 }
+@media screen and (max-width: 540px){
+    #description {
+        margin-top: 10%;
+    }
 
+}
 
