--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -16,6 +16,7 @@ body{
     padding: 0;
     padding-top:60px;
     padding-bottom: 60px;
+    padding-right:0;
     font: 15px/1.5 Arial, Helvetica, sans-serif;
 }
 .container{
@@ -31,6 +32,7 @@ header{
     top: 0%;
     width:100%;
     position:fixed;
+    z-index: 1;
 }
 header a{
     color: white;
@@ -60,7 +62,7 @@ header .highlight, header .current a{
     font-weight:bold;
 }
 header a:hover{
-    color: #ffc107;
+    color: #fff;
     font-weight:bold;
 }
 @media screen and (max-width: 540px){
@@ -70,7 +72,12 @@ header a:hover{
     }
     header li{ 
         display:block;   
+        margin-left: 35%;
     }
+    h1{
+        text-align: center;
+    }
+
 }
 footer{
     background-color:tomato;
